--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
   </head>
   <body>
     <div class="container">
-      <h1>Movie Player Test</h1>
+      <h1>Series Player Test</h1>
       <!-- HTML code for the search bar -->
       <div class="container">
         <input
           type="text"
           id="searchBar"
-          placeholder="Enter movie or series name"
+          placeholder="Enter series name"
         />
         <button onclick="getMovieId()">Search</button>
       </div>
