--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Series Player Test</h1>
+      <h1>Series Player</h1>
       <!-- HTML code for the search bar -->
       <div class="container">
         <input
