--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             // Update the src attribute of the iframe element with the movie ID
             const iframeElement = document.getElementById("movieEmbed");
-            irameElemenft.src = `https://vidsrc.to/embed/tv/${id}`;
+            iframeElemenft.src = `https://vidsrc.to/embed/tv/${id}`;
           })
           .catch((error) => {
             console.error("An error occurred:", error);
