--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html>
   <head>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
       /* CSS code */
       body {
-        background-color: #f0f0f0;
+        background-color: #f1e8e8;
         font-family: Arial, sans-serif;
       }
 
       h1 {
         color: #333333;
         text-align: center;
+        font-family: 'Young Serif', serif;
       }
 
       .container {
@@ -29,7 +31,9 @@
         left: 0;
         width: 100%;
         height: 100%;
+        border: 2px solid #000;
       }
+
       #searchBar {
         padding: 10px;
         border: 1px solid #000000;
@@ -38,7 +42,15 @@
         background-color: #f5f5f5;
         width: 300px;
         margin-bottom: 10px;
+        font-family: 'Young Serif', serif;
+        border-radius: 6px;
+        border: 2px solid #000;
+        background-color: transparent;
+        align-items: center;
+        justify-content: center;
+        
       }
+
       button {
         padding: 10px;
         font-size: 16px;
@@ -46,18 +58,23 @@
         background-color: #4caf50;
         color: white;
         cursor: pointer;
+        border: 2px solid #000;
+        border-radius: 6px;
+        align-items: center;
+        justify-content: center;
       }
+
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Movie Player</h1>
+      <h1>TV Series Player</h1>
       <!-- HTML code for the search bar -->
       <div class="container">
         <input
           type="text"
           id="searchBar"
-          placeholder="Enter series name"
+          placeholder="Enter tv series name"
         />
         <button onclick="getMovieId()">Search</button>
       </div>
@@ -97,6 +114,4 @@
       // getMovieId('The Shawshank Redemption');
     </script>
   </body>
-
-
 </html>
