--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
         <iframe src="" type="" id="movieEmbed" allowfullscreen></iframe>
       </div>
     </div>
+    <script type='text/javascript' src='config.js' ></script>
     <script>
+    
       // JavaScript code that connects to TMDB API and retrieves the movie ID
       function getMovieId() {
         const query = document.getElementById("searchBar").value; // Get the value from the search bar
