--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <iframe src="" type="" id="movieEmbed" allowfullscreen></iframe>
       </div>
     </div>
-    <script type='text/javascript' src='config.js' ></script>
+    <script src='config.js'></script>
     <script>
       var apiKey = config.api_key
     
