--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
     <script src='config.js'></script>
     <script>
-      const apiKey = process.env.api_key
+      const apiKey = process.env.API_KEY
     
       // JavaScript code that connects to TMDB API and retrieves the movie ID
       function getMovieId() {
