--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
         <iframe src="" type="" id="movieEmbed" allowfullscreen></iframe>
       </div>
     </div>
-    <script src='config.js'></script>
+    <script src="config.js"></script>
     <script>
-      const apiKey = process.env.API_KEY
+      apiKey = config.API_KEY
     
       // JavaScript code that connects to TMDB API and retrieves the movie ID
       function getMovieId() {
         const query = document.getElementById("searchBar").value; // Get the value from the search bar
 
         // Encode the query parameter using encodeURIComponent function
-        const url = `https://api.tmdb.org/3/search/tv?api_key=` + API_KEY + `&query=${encodeURIComponent(
+        const url = `https://api.tmdb.org/3/search/tv?api_key=${apiKey}&query=${encodeURIComponent(
           query
         )}`;
 
