--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <script src="config.js"></script>
     <script>
-      apiKey = config.API_KEY
+      apiKey = API_KEY
     
       // JavaScript code that connects to TMDB API and retrieves the movie ID
       function getMovieId() {
