--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <script src="config.js"></script>
     <script>
-      apiKey = ${{env.API_KEY}}
+      apiKey = '72af0d7a1271d59db62a3d2fe9c4be77'
     
       // JavaScript code that connects to TMDB API and retrieves the movie ID
       function getMovieId() {
