--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       h1 {
         color: #333333;
         text-align: center;
-        font-family: "Young Serif, serif";
+        font-family: 'Young Serif', serif;
       }
 
       /* Use a class selector for the container element */
@@ -109,7 +109,7 @@
     </div>
     <script src="config.js"></script>
     <script>
-      apiKey = '72af0d7a1271d59db62a3d2fe9c4be77'
+      apiKey = config.API_KEY
     
       // JavaScript code that connects to TMDB API and retrieves the movie ID
       function getMovieId() {
