--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <script src="config.js"></script>
     <script>
-      exports.handler = async function (event, context) { const apiKey = process.env.API_KEY }
+      export default async (request, context) => { const apiKey = Netlify.env.get("API_KEY") }
     
       // JavaScript code that connects to TMDB API and retrieves the movie ID
       function getMovieId() {
