--- a/index.html
+++ b/index.html
@@ -107,9 +107,8 @@
         <iframe src="" type="" id="movieEmbed" allowfullscreen></iframe>
       </div>
     </div>
-    <script src="config.js"></script>
     <script>
-      export default async (request, context) => { const apiKey = Netlify.env.get("API_KEY") }
+      apiKey = '72af0d7a1271d59db62a3d2fe9c4be77'
     
       // JavaScript code that connects to TMDB API and retrieves the movie ID
       function getMovieId() {
