--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
       color: #287c2b;
     }
 
-    .mainh1 {
-      color: white
-    }
-
     #searchBar {
       width: 100%;
       padding: 10px;
@@ -77,7 +73,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      border: none;
+      border: solid;
       border-radius: 8px;
     }
 
@@ -125,13 +121,13 @@
 
 <body>
   <header>
-    <h1 class="mainh1">TV Series Player</h1>
+    <h1>TV Series Player</h1>
   </header>
   <div class="container" id="container">
     <input type="text" id="searchBar" placeholder="Enter TV series name" />
     <button id="button" onclick="getSeriesId()">Search</button>
     <div id="video">
-      <iframe src="" type="" id="seriesEmbed" allowfullscreen></iframe>
+      <iframe src="" type="" id="seriesEmbed" allowfullscreen allow="autoplay; encrypted-media; picture-in-picture" allowFullScreen="true"></iframe>
     </div>
     <div id="details"></div>
   </div>
@@ -166,7 +162,7 @@
 
         // Display details
         document.getElementById("video").innerHTML = `
-          <iframe src="https://vidsrc.to/embed/tv/${seriesId}" type="" id="seriesEmbed" allowfullscreen></iframe>
+          <iframe src="https://vidsrc.to/embed/tv/${seriesId}?autoplay=true" type="" id="seriesEmbed" allowfullscreen allow="autoplay; encrypted-media; picture-in-picture" allowFullScreen="true"></iframe>
         `;
         document.getElementById("details").innerHTML = `
           <h1>${title}</h1>
